@@ -1,3 +1,9 @@
+2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
+	video queue is running in decoder thread therefore 
+	mutex is not needed. Added comments.
+
 2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_sound_handler.(cpp,h): reverted
